[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Tie.gd" type="Script" id=1]
[ext_resource path="res://Assets/tieSheet.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "explode"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=2]

resource_name = "hit"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 2, 4, 3, 4 ]
}

[sub_resource type="Animation" id=3]

resource_name = "start"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2, 1 ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 14.1565, 10 )

[node name="Tie" type="Area2D"]

position = Vector2( 0.157784, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
nbrSprites = 1
useMultiSprites = false
life = 3
hitSomething = 3
points = 70
speedX = 10.0
speedY = 200.0
randomX = 50.0
randomY = 0
randPowerUp = 50
setRotation = false
speedRotation = 0
rndRotation = false

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
hframes = 13
frame = 1

[node name="anim" type="AnimationPlayer" parent="." index="1"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/explode = SubResource( 1 )
anims/hit = SubResource( 2 )
anims/start = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 0.0352709, -0.303366 )
scale = Vector2( 1.07139, 1.20155 )
shape = SubResource( 4 )

[node name="shootTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = true

[node name="shootFrom" type="Position2D" parent="." index="5"]

position = Vector2( -0.237831, 14.5618 )

[node name="dirTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="SamplePlayer2D" type="AudioStreamPlayer2D" parent="." index="7"]

stream = null
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="area_entered" from="." to="." method="_on_area_enter"]

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]

[connection signal="timeout" from="dirTimer" to="." method="_on_dirTimer_timeout"]


